Fixed tooltip overflow on mobile devices

--- a/web/css/components/_tooltip.less
+++ b/web/css/components/_tooltip.less
@@ -34,5 +34,9 @@
             display: block;
             margin-bottom: @2;
         }
+
+        @media @media-md-down {
+            --dropdown-width: @48;
+        }
     }
 }
